# CheatUnityGames

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  logcat.bat  logcat.sh  push.bat  push.sh
include/: README.md
include/AndroidLog/: Logger.hpp
include/AndroidProp/: AndroidProp.h  AndroidProp.hpp
include/Dobby/: dobby.h
include/Il2cppResolver/: Il2cppUtils.h  ResolverInit.h  ResolverInit.hpp
include/Il2cppResolver/BasicStructs/: BasicStructs.h  Color.h  Quaternion.h  Ray.h  RaycastHit.h  Vector2.h  Vector3.h
include/Il2cppResolver/Il2cppApi/: il2cppClass.h
include/Il2cppResolver/Il2cppApi/2019.4.15f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2019.4.21f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2020.1.0f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2020.1.11f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2020.2.0f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2020.2.4f1/: il2cpp-class.h
include/Il2cppResolver/Il2cppApi/2021.1.0f1/: il2cpp-class.h
include/Json/: json.hpp
include/MapTools/: MapTools.h  MapTools.hpp
include/MemoryTools/: MemoryTools.h  MemoryTools.hpp
outputs/: README.md
res/: README.md
src/: UnityCheat.cpp  UnityCheat.h  UnityCheat.hpp
utils/: README.md
utils/AndroidProp/: AndroidProp.cpp  README.md
utils/ImGUI/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
utils/ImGUI/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
utils/MapTools/: MapTools.cpp
utils/MemoryTools/: MemoryTools.cpp  README.md
